sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:60: error: expected class or object definition
def chercheJoueur(base:Int, n:Int):(Int,Int) = {  //Renvoie la base et la position du joueur qui doit être déplacé.
^SelectBaseball:141: error: expected class or object definition
	def out(msg:String) {
        ^SelectBaseball:146: error: expected class or object definition
	def bringPlayersHome(base:Int) {
        ^SelectBaseball:184: error: expected class or object definition
	def findPlayerBase(start:Int, color:Int):Int = {
        ^SelectBaseball:192: error: expected class or object definition
	def findPlayerPos(base:Int, color:Int):Int = {
        ^SelectBaseball:199: error: Unmatched closing brace '}' ignored here
}
^